ingress-lb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-service-ingress
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: project-lb
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'  
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:923975749308:certificate/baf1c390-2ec0-4a61-bdf1-37f39a469c17
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # external-dns.alpha.kubernetes.io/hostname: payment.rishabhmaurya.xyz

spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class                       
  rules:
    - http:
        paths:           
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port: 
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatway-service
                port: 
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port: 
                  number: 8080                    
             

# Important Note-1: In path based routing order is very important, if we are going to use  "/*" (Root Context), try to use it at the end of all rules.                                        
                        
# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
